--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <title>jokensidian</title>
-  </head>
-  <body>
-    <div id="app">
-    </div>
-    <script type="module" src="/src/renderer.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>jokensidian</title>
+</head>
+
+<body style="box-sizing: border-box;">
+  <div id="app">
+  </div>
+  <script type="module" src="/src/renderer.tsx"></script>
+</body>
+
 </html>
